# warmbly

./: .dockerignore  .gitignore  .golangci.yml  .trivyignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  go.mod  go.sum  paseo.json  tools.go
.github/workflows/: build-push.yml  ci.yml  release.yml
admin/: .gitignore  Dockerfile  README.md  docker-entrypoint.sh  eslint.config.js  index.html  nginx.conf  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.node.json  vite.config.ts
admin/public/: config.js  site.webmanifest
admin/src/: global.css  main.tsx
cmd/backend/: envsample  main.go  native_actions_adapter.go
cmd/consumer/: main.go
cmd/sandbox/: main.go
cmd/seed/: main.go  main_test.go
cmd/worker/: envsample  main.go  uuid_test.go
deploy/: README.md
deploy/config/: env.example
deploy/docker/: air.toml  backend.Dockerfile  consumer.Dockerfile  docker-compose.yml  realtime.Dockerfile  seed.Dockerfile  worker.Dockerfile
docs/: EMSG.md  Encryption.md  Events.md  MULTI_IP_WORKERS.md  README.md  VENDOR_LOCKIN.md  architecture.md  cicd.md  deployment-guide.md  frontend-dev-guide.md  gmail.md  imap.md  integrations-oauth-setup.md  mdx-components.tsx  next.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  seed.md
docs/app/: global.css  layout.tsx  not-found.tsx  page.tsx
docs/assets/: README.md
docs/development/: Events.md  architecture.md
docs/hooks/: useKeyboardShortcuts.ts
docs/lib/: layout.shared.tsx  source.ts
docs/public/: asyncapi.json
integrations/make/: .gitignore  README.md  makecomapp.json  package.json
integrations/zapier/: .eslintrc.js  .gitignore  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
internal/api/: health.go  routes.go
internal/bitmask/: days.go
internal/config/: auth.go  config.go  config_api.go  config_auth.go  config_databases.go  config_email.go  config_google.go  config_kafka.go  config_log.go  config_smtp.go  config_stripe.go  config_tasks.go  constants.go  endpoint_storage.go  endpoints.go  inbox.go  oauth2.go  providers.go
internal/email/: config.go  imap.go  labels.go  smtp.go  validation.go
internal/errx/: codes.go  common.go  email.go  errx.go  errx_test.go  normal.go
internal/events/: publisher.go  schemas.go
internal/models/: auth.go  (+69 more)
realtime/: .gitignore  README.md  mix.exs
resources/: EMSG.md  Events.md  architecture.md  cicd.md  deployment-guide.md  gmail.md  imap.md  local-development.md  warmup-abuse-cold-research.md
scripts/: install-worker.sh  localstack-init.sh
site/: README.md  astro.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
tracking/: Cargo.toml  Dockerfile
tracking/src/: abuse.rs  config.rs  events.rs  handlers.rs  kafka.rs  links.rs  main.rs  nats.rs  observability.rs  producer.rs
tracking/src/aws/: mod.rs  secrets.rs  ssm.rs
web/: .dockerignore  .env.example  Dockerfile  README.md  docker-entrypoint.sh  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
web-admin/: .env.example  README.md  index.html  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
(+2652 files in other folders)
